--- a/app.yaml
+++ b/app.yaml
@@ -6,46 +6,46 @@ handlers:
 
 # All URLs are handled by the Go application script
   
-- url: /static/(.*\.ico)
+- url: /(.*\.ico)
   mime_type: image/x-icon
   static_files: static/\1
   upload: static/(.*\.ico)
 
-- url: /static/(.*\.(bmp|gif|ico|jpeg|jpg|png))
+- url: /(.*\.(bmp|gif|ico|jpeg|jpg|png))
   static_files: static/\1
   upload: static/(.*\.(bmp|gif|ico|jpeg|jpg|png))
 
-- url: /static/(.*\.css)
+- url: /(.*\.css)
   mime_type: text/css
   static_files: static/\1
   upload: static/(.*\.css)
   
-- url: /static/(.*\.js)
+- url: /(.*\.js)
   mime_type: text/javascript
   static_files: static/\1
   upload: static/(.*\.js)
 
-- url: /static/(.*\.ttf)
+- url: /(.*\.ttf)
   mime_type: font/truetype
   static_files: static/\1
   upload: static/(.*\.ttf)
 
-- url: /static/(.*\.woff)
+- url: /(.*\.woff)
   mime_type: font/woff
   static_files: static/\1
   upload: static/(.*\.woff)
 
-- url: /static/(.*\.woff2)
+- url: /(.*\.woff2)
   mime_type: font/woff2
   static_files: static/\1
   upload: static/(.*\.woff2)
 
-- url: /static/(.*\.eot)
+- url: /(.*\.eot)
   mime_type: application/vnd.ms-fontobject
   static_files: static/\1
   upload: static/(.*\.woff2)
 
-- url: /static/(.*\.otf)
+- url: /(.*\.otf)
   mime_type: font/opentype
   static_files: static/\1
   upload: static/(.*\.otf)
@@ -54,7 +54,11 @@ handlers:
   static_files: static/index.html
   upload: static/index.html
 
-- url: /.*
+- url: /blog/.*
+  static_files: static/index.html
+  upload: static/index.html
+
+- url: /api/.*
   script: _go_app
 
 skip_files:
